--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "test-shiriki",
+  "name": "shiriki",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
@@ -9,13 +9,47 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/metro-runtime": "~3.1.3",
+    "@expo/vector-icons": "^14.0.0",
+    "@react-native-async-storage/async-storage": "^1.23.1",
+    "@react-native-community/checkbox": "^0.5.17",
+    "@react-native-google-signin/google-signin": "^11.0.1",
+    "@react-native-picker/picker": "^2.7.5",
+    "@react-navigation/bottom-tabs": "^6.5.19",
+    "@react-navigation/native": "^6.1.16",
+    "@react-navigation/native-stack": "^6.9.25",
+    "@reduxjs/toolkit": "^1.9.5",
+    "axios": "^1.6.7",
     "expo": "~50.0.14",
+    "expo-checkbox": "~2.7.0",
+    "expo-radio-button": "^1.0.8",
     "expo-status-bar": "~1.11.1",
+    "html-entities": "^2.5.2",
+    "i": "^0.3.7",
+    "nativewind": "^2.0.11",
+    "npm": "^10.5.1",
     "react": "18.2.0",
-    "react-native": "0.73.6"
+    "react-native": "0.73.6",
+    "react-native-element-dropdown": "^2.10.2",
+    "react-native-google-signin": "^2.1.1",
+    "react-native-picker-select": "^9.1.3",
+    "react-native-render-html": "^6.3.4",
+    "react-native-safe-area-context": "4.8.2",
+    "react-native-screens": "~3.29.0",
+    "react-native-searchable-dropdown": "^1.1.3",
+    "react-native-splash-screen": "^3.3.0",
+    "react-native-toast-notifications": "^3.4.0",
+    "react-native-vector-icons": "^10.0.3",
+    "react-native-video-player": "^0.14.0",
+    "react-native-web": "~0.19.6",
+    "react-phone-number-input": "^3.3.9",
+    "react-redux": "^8.1.2",
+    "redux-persist": "^6.0.0",
+    "toastify-react-native": "^5.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "tailwindcss": "^3.3.2"
   },
   "private": true
 }
