--- a/package.json
+++ b/package.json
@@ -9,41 +9,53 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo-google-fonts/poppins": "^0.2.3",
     "@expo/metro-runtime": "~3.1.3",
     "@expo/vector-icons": "^14.0.0",
-    "@react-native-async-storage/async-storage": "^1.23.1",
+    "@react-native-async-storage/async-storage": "1.21.0",
     "@react-native-community/checkbox": "^0.5.17",
-    "@react-native-google-signin/google-signin": "^11.0.1",
-    "@react-native-picker/picker": "^2.7.5",
+    "@react-native-picker/picker": "2.6.1",
     "@react-navigation/bottom-tabs": "^6.5.19",
+    "@react-navigation/drawer": "^6.6.15",
     "@react-navigation/native": "^6.1.16",
     "@react-navigation/native-stack": "^6.9.25",
     "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.6.7",
-    "expo": "~50.0.14",
+    "date-fns": "^3.6.0",
+    "expo": "~50.0.19",
     "expo-checkbox": "~2.7.0",
+    "expo-image-picker": "~14.7.1",
     "expo-radio-button": "^1.0.8",
     "expo-status-bar": "~1.11.1",
     "html-entities": "^2.5.2",
-    "i": "^0.3.7",
     "nativewind": "^2.0.11",
-    "npm": "^10.5.1",
     "react": "18.2.0",
     "react-native": "0.73.6",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-element-dropdown": "^2.10.2",
-    "react-native-google-signin": "^2.1.1",
+    "react-native-elements": "^3.4.3",
+    "react-native-gesture-handler": "~2.14.0",
+    "react-native-image-picker": "^7.1.2",
+    "react-native-paper": "^5.12.3",
     "react-native-picker-select": "^9.1.3",
+    "react-native-progress": "^5.0.1",
+    "react-native-radio-buttons-group": "^3.1.0",
+    "react-native-reanimated": "~3.6.2",
+    "react-native-reanimated-carousel": "^3.5.1",
     "react-native-render-html": "^6.3.4",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
     "react-native-searchable-dropdown": "^1.1.3",
+    "react-native-snap-carousel": "^3.9.1",
     "react-native-splash-screen": "^3.3.0",
+    "react-native-svg": "14.1.0",
     "react-native-toast-notifications": "^3.4.0",
     "react-native-vector-icons": "^10.0.3",
     "react-native-video-player": "^0.14.0",
     "react-native-web": "~0.19.6",
-    "react-phone-number-input": "^3.3.9",
+    "react-phone-number-input": "^3.4.3",
     "react-redux": "^8.1.2",
+    "react-toastify": "^10.0.5",
     "redux-persist": "^6.0.0",
     "toastify-react-native": "^5.0.0"
   },
